--- a/Cobros/Views/Administrador/Dashboard.cshtml
+++ b/Cobros/Views/Administrador/Dashboard.cshtml
@@ -40,7 +40,8 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mt-2 mt-lg-0">
                             <li class="nav-item"><a class="nav-link active" aria-current="page" asp-controller="Administrador" asp-action="Dashboard">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#!">Link</a></li>
+                            <li class="nav-item"><a class="nav-link active" aria-current="page" asp-controller="Login" asp-action="Index">Home</a></li>
+                            
                         </ul>
                     </div>
                 </div>
