Vista agregar alumnos, se agrego en el sidebar

--- a/Cobros/Views/Administrador/Dashboard.cshtml
+++ b/Cobros/Views/Administrador/Dashboard.cshtml
@@ -25,7 +25,7 @@
         <div class="border-end bg-white" id="sidebar-wrapper">
             <div class="sidebar-heading border-bottom bg-light">Biblioteca</div>
             <div class="list-group list-group-flush">
-                <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Agregar Libros</a>                <a class="list-group-item list-group-item-action list-group-item-light p-3" asp-controller="Administrador" asp-action="RegistroDeAlumnos">Registrar Alumnos</a>
+                <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Agregar Libros</a>                <a class="list-group-item list-group-item-action list-group-item-light p-3" asp-controller="AgregarAlumno" asp-action="Index">Agregar Alumno</a>
                 <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Préstamo</a>
                 <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Devolución</a>
             </div>
